--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <p><a href="NH.html">Northern Hemisphere</a></p>
-<!--<p><a href="SH.html">Southern Hemisphere</a></p>-->
+<p><a href="SH.html">Southern Hemisphere</a></p>
 </body>
 
 </html>
